#INCLUDE_DIRECTORIES(${D7AOSS_SOURCE_DIR}/d7aoss/)
#INCLUDE_DIRECTORIES(${D7AOSS_SOURCE_DIR}/d7aoss/hal)
#INCLUDE_DIRECTORIES(${D7AOSS_SOURCE_DIR}/d7aoss/dll)
INCLUDE_DIRECTORIES(${D7AOSS_SOURCE_DIR}/d7aoss/hal/efm32gg/CMSIS/device/include)
    INCLUDE_DIRECTORIES(${D7AOSS_SOURCE_DIR}/d7aoss/hal/efm32gg/)
    INCLUDE_DIRECTORIES(${D7AOSS_SOURCE_DIR}/d7aoss/hal/efm32gg/CMSIS/include)
    INCLUDE_DIRECTORIES(${D7AOSS_SOURCE_DIR}/d7aoss/hal/efm32gg/CMSIS/device/include)
    INCLUDE_DIRECTORIES(${D7AOSS_SOURCE_DIR}/d7aoss/hal/efm32gg/kits/common/drivers)
    INCLUDE_DIRECTORIES(${D7AOSS_SOURCE_DIR}/d7aoss/hal/efm32gg/emlib/inc)
ADD_EXECUTABLE(efm32_hal blink.c)
TARGET_LINK_LIBRARIES(efm32_hal D7AOSS PHY HAL)
SET_TARGET_PROPERTIES(efm32_hal PROPERTIES LINK_FLAGS "-T${D7AOSS_SOURCE_DIR}/d7aoss/hal/efm32gg/CMSIS/device/linker/efm32gg.ld")
