INCLUDE_DIRECTORIES(${D7AOSS_SOURCE_DIR}/d7aoss/)
INCLUDE_DIRECTORIES(${D7AOSS_SOURCE_DIR}/d7aoss/framework)
INCLUDE_DIRECTORIES(${D7AOSS_SOURCE_DIR}/d7aoss/hal)
INCLUDE_DIRECTORIES(${D7AOSS_SOURCE_DIR}/d7aoss/phy)

ADD_EXECUTABLE(noise_test main.c)
TARGET_LINK_LIBRARIES(noise_test D7AOSS PHY FRAMEWORK HAL)

IF(D7AOSS_HAL_DRIVER STREQUAL "efm32gg")
    SET_TARGET_PROPERTIES(noise_test PROPERTIES LINK_FLAGS "-T${D7AOSS_SOURCE_DIR}/d7aoss/hal/efm32gg/CMSIS/device/linker/efm32gg.ld")
ENDIF()

