INCLUDE_DIRECTORIES(${D7AOSS_SOURCE_DIR}/d7aoss/)
INCLUDE_DIRECTORIES(${D7AOSS_SOURCE_DIR}/d7aoss/framework)
INCLUDE_DIRECTORIES(${D7AOSS_SOURCE_DIR}/d7aoss/hal)
INCLUDE_DIRECTORIES(${D7AOSS_SOURCE_DIR}/d7aoss/phy)

ADD_EXECUTABLE(phy_test main.c filesystem.c)
TARGET_LINK_LIBRARIES(phy_test OSS7STACK)

IF(D7AOSS_HAL_DRIVER STREQUAL "efm32gg")
    SET_TARGET_PROPERTIES(phy_test PROPERTIES LINK_FLAGS "-T${D7AOSS_SOURCE_DIR}/d7aoss/hal/efm32gg/CMSIS/device/linker/efm32gg.ld")
ELSEIF(D7AOSS_HAL_DRIVER STREQUAL "cc430")
    SET_TARGET_PROPERTIES(phy_test PROPERTIES LINK_FLAGS "-Tcc430f5137.ld -Wl,--gc-sections")
ENDIF()
