INCLUDE_DIRECTORIES(${D7AOSS_SOURCE_DIR}/d7aoss/)
INCLUDE_DIRECTORIES(${D7AOSS_SOURCE_DIR}/d7aoss/framework)
INCLUDE_DIRECTORIES(${D7AOSS_SOURCE_DIR}/d7aoss/hal)
INCLUDE_DIRECTORIES(${D7AOSS_SOURCE_DIR}/d7aoss/dll)

ADD_EXECUTABLE(file_notification main.c filesystem.c)
TARGET_LINK_LIBRARIES(file_notification OSS7STACK)

IF(D7AOSS_HAL_DRIVER STREQUAL "efm32gg")
SET_TARGET_PROPERTIES(file_notification PROPERTIES LINK_FLAGS "-T${D7AOSS_SOURCE_DIR}/d7aoss/hal/efm32gg/CMSIS/device/linker/efm32gg.ld")
ELSEIF(D7AOSS_HAL_DRIVER STREQUAL "cc430")
    SET_TARGET_PROPERTIES(file_notification PROPERTIES LINK_FLAGS "-Tcc430f5137.ld -Wl,--gc-sections")
ENDIF()
