INCLUDE_DIRECTORIES(${D7AOSS_SOURCE_DIR}/d7aoss/)
INCLUDE_DIRECTORIES(${D7AOSS_SOURCE_DIR}/d7aoss/framework)
INCLUDE_DIRECTORIES(${D7AOSS_SOURCE_DIR}/d7aoss/hal)
INCLUDE_DIRECTORIES(${D7AOSS_SOURCE_DIR}/d7aoss/phy)

ADD_EXECUTABLE(continuous_tx main.c)
TARGET_LINK_LIBRARIES(continuous_tx OSS7STACK)

IF(D7AOSS_HAL_DRIVER STREQUAL "efm32gg")
    SET_TARGET_PROPERTIES(continuous_tx PROPERTIES LINK_FLAGS "-T${D7AOSS_SOURCE_DIR}/d7aoss/hal/efm32gg/CMSIS/device/linker/efm32gg.ld")
ENDIF()

