INCLUDE_DIRECTORIES(${D7AOSS_SOURCE_DIR}/d7aoss/framework)
INCLUDE_DIRECTORIES(${D7AOSS_SOURCE_DIR}/d7aoss/hal)
#INCLUDE_DIRECTORIES(${D7AOSS_SOURCE_DIR}/d7aoss/dll)
INCLUDE_DIRECTORIES(${D7AOSS_SOURCE_DIR}/d7aoss/hal/efm32gg/CMSIS/device/include)
INCLUDE_DIRECTORIES(${D7AOSS_SOURCE_DIR}/d7aoss/hal/efm32gg/)
INCLUDE_DIRECTORIES(${D7AOSS_SOURCE_DIR}/d7aoss/hal/efm32gg/CMSIS/include)
INCLUDE_DIRECTORIES(${D7AOSS_SOURCE_DIR}/d7aoss/hal/efm32gg/CMSIS/device/include)
INCLUDE_DIRECTORIES(${D7AOSS_SOURCE_DIR}/d7aoss/hal/efm32gg/emlib/inc)
INCLUDE_DIRECTORIES(${D7AOSS_SOURCE_DIR}/d7aoss/hal/efm32gg/kits/common/drivers)
ADD_EXECUTABLE(efm32_spi efm32_spi_test.c)
TARGET_LINK_LIBRARIES(efm32_spi D7AOSS PHY HAL FRAMEWORK)
SET_TARGET_PROPERTIES(efm32_spi PROPERTIES LINK_FLAGS "-T${D7AOSS_SOURCE_DIR}/d7aoss/hal/efm32gg/CMSIS/device/linker/efm32gg.ld")

