#list all subdirectories to get a list of components
LIST_SUBDIRS(COMPONENTS ${CMAKE_CURRENT_SOURCE_DIR})
#add the individual libraries
FOREACH(COMPONENT ${COMPONENTS})
    SET(COMPONENT_LIBRARY_NAME "FRAMEWORK_${COMPONENT}")
    LIST(FIND FRAMEWORK_OVERRIDE_LIBS "FRAMEWORK_${COMPONENT}" rmId)
    IF(rmId LESS 0) #component is not in rmlist
	ADD_SUBDIRECTORY(${COMPONENT})
    SET_GLOBAL(FRAMEWORK_LIBS "${FRAMEWORK_LIBS};FRAMEWORK_${COMPONENT}")
    ENDIF()
    UNSET(COMPONENT_LIBRARY_NAME)
ENDFOREACH()
